mudei uma linha

--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,9 @@
   width: 35%;
 }
 
+.footer-nav {
+}
+
 /*******************************/
 /* MEALS SECTION */
 /*******************************/
